# init-scripts

./: .gitignore  Makefile.am  README.md  configure.ac
crontab/: Makemodule.am  swclock.in
docs/: defconfig.md  network.md  swclock.md
etc/: 40-ntpsetdate.in
scripts/: Makemodule.am  ifcfg.sh.in  ifdown.sh  ifrename.sh.in  modules_load.sh.in  overlay.sh  setntpdate.sh
services/: Makemodule.am  devfs.in  dhcpcd.in  dhcpcdmaster  ifcfg.in  ifdown.in  mountusr.in  nginx  ntpsetdate.gcron.in  tmpfsvar.in  unmount
